# ink-vscode

./: .editorconfig  .eslintrc.js  .gitignore  .prettierignore  .vscodeignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  TESTING.md  package.json  prebuild.js  setup.js
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  release.yaml  test.yaml
src/: commands.ts  constants.ts  extension.ts  manager.ts  middleware.ts  services.ts  snippets.ts  utils.ts
src/test/: runTest.ts
src/test/suite/: actions.test.ts  completion.test.ts  hover.test.ts  (+9 more)
test-fixtures/: Cargo.toml  README.md
test-fixtures/custom-environment/: Cargo.toml
test-fixtures/erc20/: Cargo.toml
test-fixtures/flipper/: Cargo.toml
test-fixtures/mother/: Cargo.toml
test-fixtures/multisig/: Cargo.toml
test-fixtures/non-packed-tuple-struct/: Cargo.toml  lib.rs
test-fixtures/psp22-extension/: Cargo.toml
test-fixtures/trait-flipper/: Cargo.toml
test-fixtures/v4/erc20/: Cargo.toml
test-fixtures/v4/non-packed-tuple-struct/: Cargo.toml  lib.rs
test-fixtures/v4/psp22-extension/: Cargo.toml
test-fixtures/v4/trait-erc20/: Cargo.toml  lib.rs
test-fixtures/v5/erc20/: Cargo.toml
test-fixtures/v5/events/: Cargo.toml
test-fixtures/v5/events/event-def/: Cargo.toml
test-fixtures/v5/events/event-def-unused/: Cargo.toml
test-fixtures/v5/events/event-def2/: Cargo.toml
test-fixtures/v5/non-packed-tuple-struct/: Cargo.toml
test-fixtures/v5/psp22-extension/: Cargo.toml
test-fixtures/v5/trait-erc20/: Cargo.toml  lib.rs
test-fixtures/v5/wildcard-selector/: Cargo.toml
