[workspace]

members = [
    # v5
    "v5/erc20",
    "v5/events",
    "v5/non-packed-tuple-struct",
    "v5/psp22-extension",
    "v5/trait-erc20",
    "v5/wildcard-selector",
    # v4
    "v4/erc20",
    "v4/non-packed-tuple-struct",
    "v4/psp22-extension",
    "v4/trait-erc20"
]

resolver = "2"