[package]
name = "non_packed_tuple_struct"
version = "4.2.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "4.2.1", default-features = false }
ink_env = { version = "4.2.1", default-features = false }
ink_storage = { version = "4.2.1", default-features = false }
ink_primitives = { version = "4.2.1", default-features = false }
ink_metadata = { version = "4.2.1", default-features = false, optional = true }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "ink_primitives/std",
    "ink_env/std",
    "ink_storage/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
